conf/gateway.yml
---
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: acme-lb
spec:
  controller: traefik.io/gateway-controller
  parametersRef:
    name: acme-lb-configmap
    group: core
    resource: configmaps

---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: acme-lb
  listeners:  # Use GatewayClass defaults for listener definition.
    - protocol: HTTP
      port: 80
      routes:
        resource: httproutes
        routeNamespaces:
          namespaceSelector: {}
          onlySameNamespace: false
        routeSelector:
          matchLabels:
            app: foo

---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: http-app-1
  namespace: default
  labels:
    app: foo
spec:
  hosts:
    - hostnames:
        - "foo.com"
      rules:
        - matches:
            - path:
                type: Exact
                value: /bar
          forward:
            to:
              - targetRef:
                  name: whoami
                weight: 1
